# cito

./: .gitignore  .gitignore.swp  CMakeLists.txt  LICENSE  MUJOCO_LOG.TXT  README.md  package.xml
config/: model.yaml  params.yaml  params_derivative.yaml  params_flymanoid.yaml  params_sawyer.yaml  params_sawyer_fish.yaml  params_ur3e_fish_pull.yaml  params_ur3e_fish_push.yaml  path.yaml  penalty_loop.yaml  perturbation.yaml  scvx.yaml  sim.yaml  task.yaml  task_flymanoid.yaml  task_sawyer.yaml  vscm.yaml
include/: cito_control.h  cito_deriv.h  cito_numdiff.h  cito_params.h  cito_params_flymanoid.h  cito_params_sawyer.h  cito_scvx.h  cito_sqopt.h  mj_savelog.h
include/cito/: control.h  numdiff.h  params.h  penalty_loop.h  savelog.h  scvx.h  sqopt.h
include/mujoco/: mjdata.h  mjmodel.h  mjrender.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h  uitools.c  uitools.h
launch/: main.launch
model/: box_inertia_calculator.py  flymanoid.xml  hsr.xml  iiwa_workcell.xml  read_flymanoid.txt  read_sawyer_push.txt  readable_flymanoid.txt  readable_hsr.txt  readable_sawyer_fish.txt  readable_sawyer_push.txt  readable_ur3e_fish.txt  red_box.urdf  sawyer.urdf  sawyer.xml  sawyer_contact.xml  sawyer_fish.xml  sawyer_push.xml  ur3e.urdf  ur3e.xml  ur3e_contact.xml  ur3e_fish.xml
model/mesh/fish/: fish.stl
model/mesh/hsr/collision/: base.stl  bumper.stl  laser.stl
model/mesh/hsr/visual/: base_light.dae  body_light.dae  bumper.dae  head_pan.dae  l_distal.dae  l_proximal.dae  laser.dae  palm_light.dae  r_distal.dae  r_proximal.dae  torso_base.dae  xtion.dae
savedTrajecInfo/: A_matrices.csv  after_A_matrices.csv  before_A_matrices.csv
src/: cito_control.cpp  cito_deriv.cpp  cito_numdiff.cpp  cito_params.cpp  cito_scvx.cpp  cito_sqopt.cpp  composeTestingData.py  derivative_comparison.cpp  derivative_contact.cpp  generateRandomScenes.py  main.cpp  mj_playlog.cpp  mj_savelog.cpp  model_comparison.cpp  model_test.cpp  mujoco_vs_pinocchio.cpp  playlog.cpp  tosc.cpp
src/cito/: CMakeLists.txt  control.cpp  numdiff.cpp  package.xml  params.cpp  penalty_loop.cpp  savelog.cpp  scvx.cpp  sqopt.cpp
src/cito/include/: cito_cont.h  cito_control.h  cito_numdiff.h  cito_params.h  cito_params_flymanoid.h  cito_scvx.h  cito_sqopt.h  cito_types.h  mj_savelog.h
src/cito/model/: flymanoid.xml  read_flymanoid.txt
src/cito/src/: cito_cont.cpp  cito_control.cpp  cito_numdiff.cpp  cito_scvx.cpp  cito_sqopt.cpp  flymanoid.cpp  flymanoid_scvx.cpp  flymanoid_test.cpp  main.cpp  mj_playlog.cpp  mj_savelog.cpp  model_test.cpp
src/mjc200/: CMakeLists.txt  package.xml
src/scenes/: 10.yaml  12.yaml  13.yaml  17.yaml  19.yaml  2.yaml  21.yaml  23.yaml  26.yaml  27.yaml  28.yaml  29.yaml  30.yaml  31.yaml  32.yaml  34.yaml  35.yaml  36.yaml  37.yaml  39.yaml  4.yaml  40.yaml  41.yaml  42.yaml  45.yaml  46.yaml  47.yaml  50.yaml  51.yaml  52.yaml  55.yaml  56.yaml  57.yaml  58.yaml  59.yaml  6.yaml  60.yaml  61.yaml  65.yaml  68.yaml  (+18 more)
test/: fcl_funcs.cpp  test_cito.cpp
testingData/: data.csv
testingData/data/SI2/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
testingData/data/baseline/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
testingData/scenes/: 0.yaml  1.yaml  11.yaml  14.yaml  15.yaml  16.yaml  18.yaml  20.yaml  22.yaml  24.yaml  25.yaml  3.yaml  33.yaml  38.yaml  43.yaml  44.yaml  48.yaml  49.yaml  5.yaml  53.yaml  54.yaml  62.yaml  63.yaml  64.yaml  66.yaml  67.yaml  69.yaml  7.yaml  71.yaml  74.yaml  77.yaml  80.yaml  81.yaml  84.yaml  85.yaml  86.yaml  87.yaml  89.yaml  92.yaml  93.yaml  (+2 more)
