<package format="2">
  <name>cito</name>
  <version>1.0.0</version>
  <description>A Contact-Implicit Trajecory Optimization (CITO) Package</description>


  <author>Aykut Onol</author>
  <maintainer email="aonol@ece.neu.edu">Aykut Onol</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/aykutonol/cito</url>
  <url type="bugtracker">https://github.com/aykutonol/cito/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

</package>
